--- a/public/Fases/fase4/PaginaFinal.html
+++ b/public/Fases/fase4/PaginaFinal.html
@@ -48,7 +48,7 @@ body {
         // Função para lidar com o clique no botão
         function redirecionar() {
             // Altere o URL abaixo para a página desejada
-            window.location.href = "index.html";
+            window.location.href = "https://rafael-silva-natal.github.io/FisicaMemGame_vers-o1/";
         }
         /*
         Função em observação para resdirecionamento de link... pagina final para index (página inicial)
